<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Interview"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <!-- Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description2"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description3"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description4"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description5"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />

    <!-- Champ de saisie pour le code secret -->
    <EditText
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Entrez le code secret"
        android:layout_gravity="center"
        android:textColor="@color/white" />

    <!-- Bouton "Next" -->
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>
